maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:11: error: '(' expected but identifier found.
 {droite();if est FaceMur() {droite()}; avance()}
              ^WallFollowerMaze:11: error: illegal start of simple expression
 {droite();if est FaceMur() {droite()}; avance()}
                                      ^