maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while (!estSurBiscuit)
      {keepHandOnSideWall()}
  
  prendBiscuit()
}

def keepHandOnSideWall()
{gauche();
 if (estFaceMur())
 {droite();if est FaceMur() {droite()}; avance()}
 else
 {avance()}



}